--- a/ui/style.css
+++ b/ui/style.css
@@ -20,3 +20,12 @@ body {
     height: 200px;
 }
 
+.container {
+            max-width: 800px;
+            color: blue;
+            margin: 0 auto;
+            font-family: sans-serif;
+            padding-top: 80px;
+            padding-left: 20px;
+            padding-right: 20px;
+        }
